--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -14,6 +15,7 @@ fieldset {
 }
 
 h1,
+h2,
 legend {
   font-family: "Staatliches", sans-serif;
 }
@@ -31,7 +33,7 @@ legend {
   font-size: 3rem;
   line-height: 3rem;
   color: #fff;
-  padding-top: 140px;
+  padding-top: 100px;
   margin-bottom: 16px;
 }
 
@@ -43,16 +45,79 @@ legend {
 }
 
 .form-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
   background-color: #fff;
   padding: 64px;
   border-radius: 20px 20px 0 0;
-  margin-top: -120px;
+  margin-top: -110px;
+}
+
+.cols-2 {
+  display: flex;
+  gap: 22px;
+}
+
+.cols-2 input[type="text"] {
+  width: 300px;
+}
+
+.input-fields-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.input-fields-wrapper label {
+  color: #4e4958;
+  font-size: 0.875rem;
+  margin-top: 16px;
+}
+
+.input-fields-wrapper label span {
+  color: #737178;
+  font-size: 0.75rem;
+}
+
+.input-fields-wrapper input {
+  background-color: #fafafc;
+  border: 1px solid #e6e6f0;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.cols-3 {
+  display: flex;
+  gap: 16px;
+}
+
+.cols-3 input[type="date"] {
+  margin-right: 16px;
+  width: 340px;
+}
+
+form h2 {
+  color: #535971;
+  font-size: 1.25rem;
+  text-transform: uppercase;
+  margin-top: 32px;
+  font-weight: 400;
+}
+
+fieldset legend {
+  font-size: 1.5rem;
+  color: #535971;
+  padding-bottom: 16px;
+  border-bottom: 1px solid #e6e6f0;
+  width: 100%;
 }
 
 footer {
   background-color: #535971;
   padding: 60px 80px;
   border-radius: 0 0 20px 20px;
+  margin-bottom: 120px;
 }
 
 footer input {
